--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ color: #000; /* or whatever colour your text is */
 <br><br><br><br><br>
 <p style="font-size:150%">Adele Druck</p>
 <br>
-<p style="font-size:90%"><a href="https://www.math.ucla.edu/~eprywes/adeledruck/resume.pdf">Resume</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.math.ucla.edu/~eprywes/adeledruck/portfolio.pdf">Portfolio</a></p>
+<p style="font-size:90%"><a href="https://www.adeledruck.com/resume.pdf">Resume</a>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.adeledruck.com/portfolio.pdf">Portfolio</a></p>
 <br><br><br><br><br><br>
 <img src="rubber.jpg" width="40%" style="float:left; margin-top:
 0.5em; margin-right: 20em">
