--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ color: #000; /* or whatever colour your text is */
 <p style="font-size:150%">Adele Druck</p>
 <br>
 <p style="font-size:90%"><a href="https://www.adeledruck.com/resume.pdf">Resume</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.adeledruck.com/portfolio.pdf">Portfolio</a></p>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.adeledruck.com/portfolio.html">Portfolio</a></p>
 <br><br><br><br><br><br>
 <img src="rubber.jpg" width="40%" style="float:left; margin-top:
 0.5em; margin-right: 20em">
